--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0"
 clap = { version = "4.5.31", features = ["derive"] }
+clio = { version = "0.3.5", features = ["clap-parse"] }
 convert_case = "0.8.0"
 yaml-rust2 = "0.10"
