--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ anyhow = "1.0"
 clap = { version = "4.5.31", features = ["derive"] }
 clio = { version = "0.3.5", features = ["clap-parse"] }
 convert_case = "0.8.0"
+tera = "1.20.0"
 yaml-rust2 = "0.10"
