--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "aider-script"
 version = "0.1.0"
+description = "A CLI wrapper around aider to make calling reusable prompts convenient"
 edition = "2024"
+license = "MIT"
+
 
 [dependencies]
 anyhow = "1.0"
