Dev work on tagging releases

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,17 @@ jobs:
             echo "changed=false" >> $GITHUB_ENV
           fi
 
-      - name: Publish to crates.io
-        if: env.changed == 'true'
-        run: cargo publish
-        env:
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      - name: Tag the release
+        if: github.ref == 'refs/heads/ci_update'
+        # if: env.changed == 'true'
+        run: |
+          version=$(grep '^version\s*=' Cargo.toml | sed -E 's/version[[:space:]]*=[[:space:]]*"(.*)"/\1/')
+          echo "Version: $version"
+      # git tag -a v$version -m "Release v$version"
+      # git push origin v$version
+
+      # - name: Publish to crates.io
+      #   if: env.changed == 'true'
+      #   run: cargo publish
+      #   env:
+      #     CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
