--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ jobs:
   build_and_test:
     name: Build, test and publish
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
         with:
@@ -40,6 +42,9 @@ jobs:
           version=$(grep '^version\s*=' Cargo.toml | sed -E 's/version[[:space:]]*=[[:space:]]*"(.*)"/\1/')
 
           echo "Tagging version: $version"
+
+          git config user.name "Automated"
+          git config user.email "actions@users.noreply.github.com"
 
           git tag -a v$version -m "Release v$version"
           git push origin v$version
